# SPECFEMPP_Playground

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
benchmark/: CMakeLists.txt  gradient.cpp
cmake/: kokkos.cmake
core/: CMakeLists.txt  SFPP_playground.hpp
core/jacobian_matrix/: jacobian_matrix.hpp
core/jacobian_matrix/initializer/: regular.hpp
core/kernels/: kernels.hpp
core/kernels/gradient/: gradient.hpp
core/kernels/gradient/implementation/: cute_implementation.hpp  cute_w_tiled_copy_fma.hpp  md_range.hpp  range.hpp  serial.hpp  team_policy.hpp  team_policy_w_chunked_scratch_view_tag.hpp  team_policy_w_scratch_view.hpp  team_policy_w_tiled_scratch_view.hpp
core/quadrature/: quadrature.hpp
core/quadrature/initializer/: identity.hpp
core/wavefield/: wavefield.hpp
core/wavefield/initializer/: element.hpp  random.hpp  uniform.hpp  zero.hpp
tests/: CMakeLists.txt  KokkosEnvironment.hpp  gradient.cpp
